--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# ---------
+.vscode
+Main.java
+# ---------
+
 # Compiled class file
 *.class
 
@@ -18,8 +23,6 @@
 *.zip
 *.tar.gz
 *.rar
-
-.vscode
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
